<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_op_1"
            android:icon="@drawable/ic_menu"
            android:title="RecyclerView Static"/>
        <item
            android:id="@+id/menu_op_2"
            android:icon="@drawable/ic_menu"
            android:title="RecyclerView Retrofit"/>
        <item
            android:id="@+id/menu_op_3"
            android:icon="@drawable/ic_menu"
            android:title="FireBase Messaging"/>
        <item
            android:id="@+id/data_binding"
            android:icon="@drawable/ic_menu"
            android:title="Data Binding"
            />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/other_stuff">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@drawable/ic_menu"
                android:title="Recycler View with Dagger"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/ic_menu"
                android:title="Custom Behavior"/>
            <item
                android:id="@+id/menu_opcion_3"
                android:icon="@drawable/ic_menu"
                android:title="Loaders"/>
            <item
                android:id="@+id/menu_opcion_4"
                android:icon="@drawable/ic_menu"
                android:title="Android Tabs"/>

        </menu>
    </item>
</menu>